--- a/example.config.toml
+++ b/example.config.toml
@@ -2,8 +2,7 @@
 heimdall_rpc_endpoint = "http://localhost:26657"
 heimdall_lcd_endpoint = "http://localhost:1317"
 
-
 [stats_details]
-secret_key = "hello"  // secret key to connect with net stats
-node = "heimdall_node" // name of your node
-net_stats_ip = "localhost:3000" // Ip to connect with netstats
+secret_key = "secret_key"
+node = "identifier"
+net_stats_ip = "localhost:3000"
