--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,9 +2,12 @@ name: goreleaser
 
 on:
   push:
-    # run only against tags
+    branches-ignore:
+      - '**'
     tags:
-      - '*'
+      - 'v*.*.*'
+      # to be used by fork patch-releases ^^
+      - 'v*.*.*-*'
 
 permissions:
   contents: write
@@ -24,7 +27,7 @@ jobs:
       - name: "Set up Go"
         uses: actions/setup-go@v2
         with:
-          go-version: 1.17.9
+          go-version: 1.17.x
       - name: "Run GoReleaser"
         uses: goreleaser/goreleaser-action@v2
         with:
